INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src )

SET(qexample3_SRCS qexample3.cpp)
INCLUDE_DIRECTORIES(${QT_QTCORE_INCLUDE_DIR} ${QT_INCLUDE_DIR})
ADD_DEFINITIONS(${REDLAND_CFLAGS})
ADD_EXECUTABLE(qexample3 ${qexample3_SRCS})
TARGET_LINK_LIBRARIES(qexample3 ${REDLAND_LIBRARIES})
TARGET_LINK_LIBRARIES(qexample3 ${QT_QTCORE_LIBRARIES})
TARGET_LINK_LIBRARIES(qexample3 qrdf)

SET(qrdfparse_SRCS QRdfParse.cpp)
INCLUDE_DIRECTORIES(${QT_QTCORE_INCLUDE_DIR} ${QT_INCLUDE_DIR})
ADD_DEFINITIONS(${REDLAND_CFLAGS})
ADD_EXECUTABLE(qrdfparse ${qrdfparse_SRCS})
TARGET_LINK_LIBRARIES(qrdfparse ${REDLAND_LIBRARIES})
TARGET_LINK_LIBRARIES(qrdfparse ${QT_QTCORE_LIBRARIES})
TARGET_LINK_LIBRARIES(qrdfparse qrdf)

SET(qrdfmodel_SRCS QRdfModel.cpp)
INCLUDE_DIRECTORIES(${QT_QTCORE_INCLUDE_DIR} ${QT_INCLUDE_DIR})
ADD_DEFINITIONS(${REDLAND_CFLAGS})
ADD_EXECUTABLE(qrdfmodel ${qrdfmodel_SRCS})
TARGET_LINK_LIBRARIES(qrdfmodel ${REDLAND_LIBRARIES})
TARGET_LINK_LIBRARIES(qrdfmodel ${QT_QTCORE_LIBRARIES})
TARGET_LINK_LIBRARIES(qrdfmodel qrdf)

#### INSTALL ####

install(TARGETS qrdfparse
		qrdfmodel
		qexample3
		RUNTIME DESTINATION bin
		LIBRARY DESTINATION lib)
